# sup-dto

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog  mvn-sonar.sh  pom.xml  todo.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/cmake/: configuration.cmake  installation.cmake  sup-dto-config.cmake.in
src/lib/: CMakeLists.txt
src/lib/sup/: CMakeLists.txt
src/lib/sup/dto/: CMakeLists.txt  any_functor.h  anytype.h  anytype_composer.h  anytype_helper.h  anytype_registry.h  anyvalue.h  anyvalue_composer.h  anyvalue_exceptions.h  anyvalue_helper.h  anyvalue_operations.h  basic_scalar_types.h  i_any_visitor.h  json_type_parser.h  json_value_parser.h  parasoft.suppress
src/lib/sup/rpc/: CMakeLists.txt  function_protocol.cpp  function_protocol.h  function_protocol_extract.cpp  function_protocol_extract.h  function_protocol_pack.cpp  function_protocol_pack.h  protocol.cpp  protocol.h  protocol_result.cpp  protocol_result.h  protocol_rpc.cpp  protocol_rpc.h  protocol_rpc_client.cpp  protocol_rpc_client.h  protocol_rpc_server.cpp  protocol_rpc_server.h  rpc_exceptions.cpp  rpc_exceptions.h
src/main/c++/: CMakeLists.txt  Makefile
src/main/c++/anyvalue/: AnyType.cpp  AnyType.h  AnyTypeHelper.cpp  AnyTypeRegistry.cpp  AnyTypeTraits.h  AnyValue.cpp  AnyValue.h  AnyValueExceptions.cpp  AnyValueExceptions.h  AnyValueHelper.cpp  ArrayTypeData.cpp  ArrayTypeData.h  ArrayValueData.cpp  ArrayValueData.h  BasicScalarTypes.cpp  CMakeLists.txt  EmptyTypeData.cpp  EmptyTypeData.h  EmptyValueData.cpp  EmptyValueData.h  ITypeData.cpp  ITypeData.h  IValueData.cpp  IValueData.h  ScalarConversion.h  ScalarTypeData.cpp  ScalarTypeData.h  ScalarValueData.cpp  ScalarValueData.h  ScalarValueDataBase.cpp  ScalarValueDataBase.h  ScalarValueDataT.h  StructDataT.cpp  StructDataT.h  StructTypeData.cpp  StructTypeData.h  StructValueData.cpp  StructValueData.h  UnboundedArrayTypeData.cpp  UnboundedArrayValueData.cpp  (+1 more)
src/main/c++/include/: AnyType.h  AnyTypeHelper.h  AnyTypeRegistry.h  AnyValue.h  AnyValueExceptions.h  AnyValueHelper.h  BasicScalarTypes.h  CMakeLists.txt  IAnySerializer.h  IAnyTypeSerializer.h  IAnyVisitor.h
src/main/c++/json/: CMakeLists.txt  IJSONWriter.h  JSONReader.cpp  JSONReader.h  JSONSerializer.cpp  JSONSerializer.h  JSONWriter.cpp  JSONWriter.h  JSONWriterT.h
src/main/c++/parse/: AnyTypeBuildNode.cpp  AnyTypeBuildNode.h  AnyTypeBuilder.cpp  AnyTypeBuilder.h  AnyTypeRootBuildNode.cpp  AnyTypeRootBuildNode.h  AnyValueArrayBuildNode.cpp  AnyValueArrayBuildNode.h  AnyValueArrayElementBuildNode.cpp  AnyValueArrayElementBuildNode.h  AnyValueBuildNode.cpp  AnyValueBuildNode.h  AnyValueBuilder.cpp  AnyValueBuilder.h  AnyValueEncodingElementBuildNode.cpp  AnyValueEncodingElementBuildNode.h  AnyValueRootBuildNode.cpp  AnyValueRootBuildNode.h  AnyValueTypeElementBuildNode.cpp  AnyValueTypeElementBuildNode.h  AnyValueValueElementBuildNode.cpp  AnyValueValueElementBuildNode.h  ArrayValueBuildNode.cpp  ArrayValueBuildNode.h  ByteParser.cpp  ByteParser.h  CMakeLists.txt  IAnyBuildNode.cpp  IAnyBuildNode.h  MemberTypeArrayBuildNode.cpp  MemberTypeArrayBuildNode.h  MemberTypeBuildNode.cpp  MemberTypeBuildNode.h  ScalarFromBytes.h  SerializationConstants.h  UnboundedArrayValueBuildNode.cpp  UnboundedArrayValueBuildNode.h
src/main/c++/rapidjson/: CMakeLists.txt  README.md
src/main/c++/serialize/: AnySerializeNode.cpp  AnySerializeNode.h  AnySerializeStack.h  AnyTypeBuilder.h  AnyTypeHelper.cpp  AnyTypeHelper.h  AnyTypeNode.cpp  AnyTypeNode.h  AnyTypeSerializeNode.cpp  AnyTypeSerializeNode.h  AnyTypeSerializeStack.cpp  AnyTypeSerializeStack.h  AnyValueHelper.cpp  AnyVisitorNode.h  AnyVisitorStack.h  ArraySerializeNode.cpp  ArraySerializeNode.h  ArrayTypeSerializeNode.cpp  ArrayTypeSerializeNode.h  ArrayVisitorNode.cpp  ArrayVisitorNode.h  ByteSerializer.cpp  ByteSerializer.h  CMakeLists.txt  CreateAnySerializeNode.cpp  CreateAnySerializeNode.h  CreateAnySerializeNodeT.h  CreateAnyVisitorNode.cpp  CreateAnyVisitorNode.h  CreateAnyVisitorNodeT.h  EmptySerializeNode.h  EmptyTypeSerializeNode.cpp  EmptyTypeSerializeNode.h  EmptyVisitorNode.h  IAnyBuildNode.cpp  IAnyBuildNode.h  IAnyTypeSerializer.h  IWriter.cpp  IWriter.h  MemberSerializeNode.h  (+19 more)
src/main/c++/sup/: CMakeLists.txt
src/main/c++/visit/: AnyVisitorStack.h  ArrayVisitorNode.h  CMakeLists.txt  CreateAnyVisitorNodeT.h  EmptyVisitorNode.h  MemberVisitorNode.h  StructVisitorNode.h  UnboundedArrayVisitorNode.h  VisitT.h
src/sup/dto/: anytype.h  anyvalue.h  basic_scalar_types.h
src/sup/dto/anyvalue/: anytype.cpp  anytype_helper.cpp  array_type_data.h  (+9 more)
src/sup/rpc/: protocol.h
src/test/c++/: CMakeLists.txt  Makefile  test.sh
test/: .clang-tidy  CMakeLists.txt
test/parasoft/: CMakeLists.txt
test/performance/: CMakeLists.txt  json_performance.h  main.cpp  performance.cpp  performance.h
test/unit/: CMakeLists.txt  abstract_composer_component_tests.cpp  abstract_type_composer_component_tests.cpp  abstract_value_composer_component_tests.cpp  anytype_builder_tests.cpp  anytype_composer_components_tests.cpp  anytype_composer_helper_tests.cpp  anytype_composer_tests.cpp  anytype_field_tests.cpp  anytype_json_serialize_tests.cpp  anytype_registry_tests.cpp  anytype_serialize_tests.cpp  anytype_tests.cpp  anyvalue_assign_tests.cpp  anyvalue_builder_tests.cpp  anyvalue_bytes_tests.cpp  anyvalue_comparison_tests.cpp  anyvalue_composer_components_tests.cpp  anyvalue_composer_helper_tests.cpp  anyvalue_composer_tests.cpp  anyvalue_ctype_tests.cpp  anyvalue_decrement_tests.cpp  anyvalue_equality_tests.cpp  anyvalue_exceptions_tests.cpp  anyvalue_field_tests.cpp  anyvalue_helper_tests.cpp  anyvalue_increment_tests.cpp  anyvalue_json_serialize_tests.cpp  anyvalue_meta.h  anyvalue_serialize_tests.cpp  anyvalue_tests.cpp  arraytype_tests.cpp  arrayvalue_invariant_tests.cpp  arrayvalue_tests.cpp  binary_encoding_tests.cpp  binary_parser_functions_tests.cpp  binary_serialization_functions_tests.cpp  binary_type_encoding_tests.cpp  binary_type_serialization_tests.cpp  binary_value_encoding_tests.cpp  (+27 more)
(+529 files in other folders)
