cmake_minimum_required(VERSION 3.5)

project(SUP-DTO-PROJECT VERSION 0.1.0)

set(LIBVERSION ${CMAKE_PROJECT_VERSION})
set(LIBSOVERSION ${CMAKE_PROJECT_VERSION_MAJOR})

if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "RelWithDebInfo")
endif()

set(TARGET_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/target)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${TARGET_DIRECTORY}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${TARGET_DIRECTORY}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TARGET_DIRECTORY}/bin)

file(MAKE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

option(COVERAGE "Generate unit test coverage information" FALSE)

add_subdirectory(src/main/c++)
add_subdirectory(src/test/c++)
